* Minor change
** Substantial change
*** Major change

1.1-0
      *  Allow finer control of plots with line.par, fill.par, points.par
      *  Fixed bug with formatting names for locfit objects
      *  Fixed bug with visregFactorPanel when partial=FALSE
      *  Changed default for ylabels to las=1 (always horizontal) 
      	 (Thank you to Doug Bates for this advice)

1.0-0
      *** Submitted to CRAN
      ** Improved support for effect plots:
	  - extensive revision to implementation
      	  - 'x' can now be categorical
	  - interactions/conditioning allowed
      ** Improved support for visreg2d
          - Interface/options consistent with visreg 
	  - Internal refactoring to share code between visreg and visreg2d
	  - Should work now with glm/rlm/gam/etc., although I haven't
	    tested all of these
      *  Fixed bug in 'ask' behavior when multple plots created
      *  Changed default (effect/conditional) for coxph models and
          fixed bug that occurred for coxph effect plots
      *  Default 'ylim' now depends on 'partial' argument
      *  Removed 'fill' option; always median fill from now on
      *  Patched get_all_vars bug when variables are in environment
          rather than data frame
      *  Added option to display panel strip names T/F
      *  Added some padding to xlim/ylim for lattice plots
      *  Default for 'ylab' changed: Delta added for effect plot
      *  Improved support for gam/locfit models

0.4-0
      ** Substantial refactoring of visreg:
      	  - new setupCond function to handle setting up of cond when
      	    'by' variables are present
	  - new functions visregPlot and visregLatticePlot to
            separate work done by the two types of plots ('by' present
            or absent)
	  - new function getXY for code that visregPlot and
            visregLatticePlot share
      *  Internal changes to handling of whitespace when 'x' is a factor
      *  Default for 'ylab' changed to always be name of response